--- a/src/app/cbs/faixa/faixa.component.html
+++ b/src/app/cbs/faixa/faixa.component.html
@@ -1,4 +1,13 @@
 <div class="divider"></div>
+<div class="container" style="margin-top: 20px;" align="center">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15288.14088842694!2d-49.2451436!3d-16.6751208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3474be4b3fcc3e00!2sIPTSP+-+Instituto+De+Patologia+Tropical+E+Sa%C3%BAde+P%C3%BAblica+UFG!5e0!3m2!1spt-BR!2sbr!4v1540418568987"
+    width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <p><b>IPTSP - Instituto de Patologia Tropical e Saúde Pública<br>
+      Rua 235 - s/n - Setor Universitário<br>
+      Goiânia - Goiás - Brasil
+      CEP: 74605050</b></p>
+</div>
+<div class="divider"></div>
 <div align="center" class="section">
   <img class="responsive-img" src="assets/images/cbs-rodape.png">
 </div>
