adicionando trabalhos apresentados

--- a/src/app/cbs/faixa/faixa.component.html
+++ b/src/app/cbs/faixa/faixa.component.html
@@ -6,6 +6,14 @@
       Rua 235 - s/n - Setor Universitário<br>
       Goiânia - Goiás - Brasil
       CEP: 74605050</b></p>
+   <hr>
+   <br>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15288.162740042992!2d-49.2438248!3d-16.6748474!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9fdbc513bc00f9c!2sFaculdade+de+Educa%C3%A7%C3%A3o+UFG!5e0!3m2!1spt-BR!2sbr!4v1540554144549"
+    width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <p><b>Faculdade de Educação - UFG<br>
+      R. 235, 307 - Setor Leste Universitário<br>
+      Goiânia - Goiás - Brasil
+      CEP: 74605050</b></p>
 </div>
 <div class="divider"></div>
 <div align="center" class="section">
