--- a/src/app/cbs/sessaotecnica/sessaotecnica.component.html
+++ b/src/app/cbs/sessaotecnica/sessaotecnica.component.html
@@ -1,5 +1,42 @@
 <app-cabeca></app-cabeca>
+<div class="container">
+    <h4 class="font-bold light-blue-text text-darken-3">Trabalhos Apresentados</h4>
+    <hr>
+    <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel lighten-5 z-depth-1">
+            <div class="row valign-wrapper">
+                <div class="col s2">
+                    <img src="assets/images/cbs/donald.png" alt="" class="circle responsive-img">
+                    <!-- notice the "circle" class -->
+                </div>
+                <div class="col s10">
+                    <b>Seminário - Perspectiva Sistémica de la Informática</b><br><br>
+                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/Seminário_14CBS_Donald.pdf"
+                        download>Seminário_14CBS_Donald</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel lighten-5 z-depth-1">
+            <div class="row valign-wrapper">
+                <div class="col s2">
+                    <img src="assets/images/cbs/alexander.png" alt="" class="circle responsive-img">
+                    <!-- notice the "circle" class -->
+                </div>
+                <div class="col s10">
+                    <b>Palestra de Abertura</b><br><br>
+                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-esp.pdf"
+                        download>BrasilSyst2018-Laszlo-esp</a>
+                    <br>
+                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-paper.pdf"
+                        download>BrasilSyst2018-Laszlo-paper</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="section" align="center">
-    <a class="btn green bnt-responsive" href="assets/sessoes-cbs/pdfs.zip" download>Download PROCEEDINGS</a>
+    <a class="btn green bnt-responsive" href="assets/sessoes-cbs/pdfs.zip" download>Download Trabalhos Apresentados</a>
 </div>
 <app-faixa></app-faixa>
