--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,7 @@
           <li routerLinkActive="active"><a href="http://conveniar.rtve.org.br/Eventos/Forms/Servicos/EventoDados.aspx?action=3"><b>Inscrições</b></a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-          <li routerLinkActive="active"><a routerLink="/sessoes"><b>Sessões Técnicas</b></a></li>
+          <li routerLinkActive="active"><a routerLink="/sessoes"><b>Trabalhos Apresentados</b></a></li>
           <li routerLinkActive="active"><a routerLink="/palestrantes"><b>Palestrantes</b></a></li>
         </ul>
       </div>
@@ -45,7 +45,7 @@
   <ul id="nav-mobile-cbs" class="side-nav">
     <li routerLinkActive="active"><a routerLink="/programacaocbs"><b>Programação Geral</b></a></li>
     <li routerLinkActive="active"><a href="http://conveniar.rtve.org.br/Eventos/Forms/Servicos/EventoDados.aspx?action=3"><b>Inscrições</b></a></li>
-    <li routerLinkActive="active"><a routerLink="/sessoes"><b>Sessões Técnicas</b></a></li>
+    <li routerLinkActive="active"><a routerLink="/sessoes"><b>Trabalhos Apresentados</b></a></li>
     <li routerLinkActive="active"><a routerLink="/palestrantes"><b>Palestrantes</b></a></li>
   </ul>
 </div>
