aplicando tab para trabalhos

--- a/src/app/cbs/sessaotecnica/sessaotecnica.component.html
+++ b/src/app/cbs/sessaotecnica/sessaotecnica.component.html
@@ -2,41 +2,185 @@
 <div class="container">
     <h4 class="font-bold light-blue-text text-darken-3">Trabalhos Apresentados</h4>
     <hr>
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-                <div class="col s2">
-                    <img src="assets/images/cbs/donald.png" alt="" class="circle responsive-img">
-                    <!-- notice the "circle" class -->
+    <div class="row">
+        <div class="col s12">
+            <ul class="tabs">
+                <li class="tab col s4"><a href="#p">Palestras / Seminário</a></li>
+                <li class="tab col s4"><a href="#w">Workshop</a></li>
+                <li class="tab col s4"><a href="#s">Sessões Técnicas</a></li>
+            </ul>
+        </div>
+        <div id="p" class="col s12">
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/donald.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Seminário - Perspectiva Sistémica de la Informática</b><br><br>
+                            <a href="assets/sessoes-cbs/Seminário_14CBS_Donald.pdf" download><img src="assets/images/icon-pdf.png"></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col s10">
-                    <b>Seminário - Perspectiva Sistémica de la Informática</b><br><br>
-                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/Seminário_14CBS_Donald.pdf"
-                        download>Seminário_14CBS_Donald</a>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/alexander.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra de Abertura</b><br><br>
+                            <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-esp.pdf"
+                                download>BrasilSyst2018-Laszlo-esp</a>
+                            <br>
+                            <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-paper.pdf"
+                                download>BrasilSyst2018-Laszlo-paper</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/otavio.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 1 - Uma experiência de aplicação do pensamento sistêmico no ensino de
+                                engenharia</b><br><br>
+                            <a href="assets/sessoes-cbs/Apresentação 14o CBS 2018 - otavio.ppt" download><img src="assets/images/icon-slide.png"></a>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/leonardo.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 2 - Criptomoedas/moedas digitais e seu impacto na sociedade contemporânea</b><br><br>
+                            <a href="assets/sessoes-cbs/Palestra Criptomoedas -  FASAM - leonardo.odp" download><img
+                                    src="assets/images/icon-slide.png"></a>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/donald.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 3 - Razonamiento Cybernético y la Ética del Vivir y Trabajar
+
+                            </b><br><br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/luciano.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 4 - Agenda brasileira para a Indústria 4.0
+                            </b><br><br>
+                            <a href="assets/sessoes-cbs/Industria40-Luciano.ppt" download><img src="assets/images/icon-slide.png"></a>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/sandro.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 5 - O dia depois de amanhã: pensamento sistêmico-cibernético para aprender a
+                                viver no Antropoceno
+                            </b><br><br>
+                            <a href="assets/sessoes-cbs/PALESTRA 14 CBS  final - sandro.ppt" download><img src="assets/images/icon-slide.png"></a>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/chris.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 6 - Pensamento Sistêmico Multimodal: aprofundamentos quanto a método, teoria e
+                                sociologia no contexto da
+                                sustentabilidade e da intradisciplinaridade
+                            </b><br><br>
+                            <a href="assets/sessoes-cbs/14 Congresso de Sistemas - Christian De Britto.ppt" download><img
+                                    src="assets/images/icon-slide.png"></a>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/celso.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Palestra 7 - Uma Experiência de Aplicação da Inovação Aberta e Social no Município de
+                                Goiânia
+
+                            </b><br><br>
+                            <br>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-                <div class="col s2">
-                    <img src="assets/images/cbs/alexander.png" alt="" class="circle responsive-img">
-                    <!-- notice the "circle" class -->
-                </div>
-                <div class="col s10">
-                    <b>Palestra de Abertura</b><br><br>
-                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-esp.pdf"
-                        download>BrasilSyst2018-Laszlo-esp</a>
-                    <br>
-                    <img src="assets/images/icon-pdf.png"><a href="assets/sessoes-cbs/BrasilSyst2018-Laszlo-paper.pdf"
-                        download>BrasilSyst2018-Laszlo-paper</a>
+        <div id="w" class="col s12">
+            <div class="col s12 m12">
+                <div class="card-panel lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="assets/images/cbs/maria.png" alt="" class="circle responsive-img">
+                            <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                            <b>Workshop - Sistêmico? A que se refere hoje?
+                                </b><br><br>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="s" class="col s12">Sessões Técnicas</div>
     </div>
 </div>
 <div class="section" align="center">
-    <a class="btn green bnt-responsive" href="assets/sessoes-cbs/pdfs.zip" download>Download Trabalhos Apresentados</a>
+    <a class="disabled btn green bnt-responsive" href="assets/sessoes-cbs/pdfs.zip" download>Download Trabalhos
+        Apresentados</a>
 </div>
 <app-faixa></app-faixa>
