mudando .ppt para .pptx

--- a/src/app/cbs/sessaotecnica/sessaotecnica.component.html
+++ b/src/app/cbs/sessaotecnica/sessaotecnica.component.html
@@ -101,7 +101,7 @@
                         <div class="col s10">
                             <b>Palestra 4 - Agenda brasileira para a Indústria 4.0
                             </b><br><br>
-                            <a href="assets/sessoes-cbs/Industria40-Luciano.ppt" download><img src="assets/images/icon-slide.png"></a>
+                            <a href="assets/sessoes-cbs/Industria40-Luciano.pptx" download><img src="assets/images/icon-slide.png"></a>
                             <br>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             <b>Palestra 5 - O dia depois de amanhã: pensamento sistêmico-cibernético para aprender a
                                 viver no Antropoceno
                             </b><br><br>
-                            <a href="assets/sessoes-cbs/PALESTRA 14 CBS  final - sandro.ppt" download><img src="assets/images/icon-slide.png"></a>
+                            <a href="assets/sessoes-cbs/PALESTRA 14 CBS  final - sandro.pptx" download><img src="assets/images/icon-slide.png"></a>
                             <br>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                                 sociologia no contexto da
                                 sustentabilidade e da intradisciplinaridade
                             </b><br><br>
-                            <a href="assets/sessoes-cbs/14 Congresso de Sistemas - Christian De Britto.ppt" download><img
+                            <a href="assets/sessoes-cbs/14 Congresso de Sistemas - Christian De Britto.pptx" download><img
                                     src="assets/images/icon-slide.png"></a>
                             <br>
                         </div>
