--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -15,3 +15,10 @@
 .scrolled .material-icons {
     color: #0288d1;
 }
+
+.isDisabled {
+    color: currentColor;
+    cursor: none;
+    opacity: 0.5;
+    pointer-events: none;
+  }
