adicionando informações do jges

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,12 +1,21 @@
 <div class="slider">
     <ul class="slides">
         <li>
+            <img style="filter: brightness(70%)" src="../../../assets/images/jges-horizontal.png">
+            <!-- random image -->
+            <div class="caption left-align">
+                <a class="btn blue slide-cbs-btn" routerLink="/evento/jges">Visão Geral</a><br><br>
+                <a class="btn green slide-cbs-btn" routerLink="/palestrantesjges">Ver Palestrantes</a><br><br>
+            </div>
+        </li>
+        <li>
             <img style="filter: brightness(70%)" src="../../../assets/images/cbs.jpg">
             <div style="top:10%" class="caption center-align">
                 <a class="btn purple slide-cbs-btn" routerLink="/evento/cbs">Visão Geral</a><br><br>
                 <a class="btn green slide-cbs-btn" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
                 <a class="btn blue slide-cbs-btn" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
-                <a style="font-size:12px" class="btn red slide-cbs-btn" routerLink="/sessoes">Ver Trabalhos Apresentados</a><br><br>
+                <a style="font-size:12px" class="btn red slide-cbs-btn" routerLink="/sessoes">Ver Trabalhos
+                    Apresentados</a>
             </div>
         </li>
         <li>
@@ -15,14 +24,6 @@
             <div class="caption left-align">
                 <h3>Olimpíada Brasileira de Informática</h3>
                 <a class="btn green" routerLink="/evento/obi">Ver mais</a>
-            </div>
-        </li>
-        <li>
-            <img style="filter: brightness(80%)" src="../../../assets/images/jges-horizontal.png">
-            <!-- random image -->
-            <div class="caption right-align">
-                <h3>Jornada Goiana de Engenharia de Software</h3>
-                <a class="btn red" routerLink="/evento/jges">Ver mais</a>
             </div>
         </li>
         <li>
