aplicando inf-intinerante

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -9,6 +9,12 @@
             </div>
         </li>
         <li>
+            <img style="filter: brightness(70%)" src="../../../assets/images/inf-intinerante/wallpaper.jpeg">
+            <div style="top:50%" class="caption center-align">
+                <a style="width:300px" class="btn blue slide-cbs-btn" routerLink="/inf-intinerante">Conheça o INF Intinerante</a><br><br>
+            </div>
+        </li>
+        <li>
             <img style="filter: brightness(70%)" src="../../../assets/images/cbs.jpg">
             <div style="top:10%" class="caption center-align">
                 <a class="btn purple slide-cbs-btn" routerLink="/evento/cbs">Visão Geral</a><br><br>
@@ -16,14 +22,6 @@
                 <a class="btn blue slide-cbs-btn" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
                 <a style="font-size:12px" class="btn red slide-cbs-btn" routerLink="/sessoes">Ver Trabalhos
                     Apresentados</a>
-            </div>
-        </li>
-        <li>
-            <img style="filter: brightness(60%)" src="../../../assets/images/obi-horizontal.png">
-            <!-- random image -->
-            <div class="caption left-align">
-                <h3>Olimpíada Brasileira de Informática</h3>
-                <a class="btn green" routerLink="/evento/obi">Ver mais</a>
             </div>
         </li>
         <li>
