--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -100,8 +100,10 @@
     <h4 class="center white-text">Galeria</h4>
     <br />
     <div class="row">
-      <div class="col s12 m6 l6">
-        <img materialize="materialbox" class="materialboxed img-boxed" src={{evento.img1}}>
+      <div *ngIf="evento.id === 'cbs'">
+        <div *ngFor="let img of image" class="col s12 m6 l6">
+          <img materialize="materialbox" class="materialboxed img-boxed" src={{img.url}}>
+        </div>
       </div>
       <div class="col s12 m6 l6">
         <img materialize="materialbox" class="materialboxed img-boxed" src={{evento.img2}}>
