atualizando pag jges

--- a/src/app/inf-intinerante/inf-intinerante.component.html
+++ b/src/app/inf-intinerante/inf-intinerante.component.html
@@ -33,9 +33,10 @@
   <p>Levar às escolas/espaços públicos o portfólio de projetos/ações do Instituto de Informática da UFG.</p>
   <br>
   <h5 style="color:#66615b"><b>O que já foi feito</b></h5>
+  <a href="https://www.ufg.br/n/111596-inf-leva-museu-da-informatica-a-escola" target="_blank">Link da notícia.</a>
   <p>Junto com os outros participantes do Projeto do Museu da Informática (alunos, técnicos e docentes do INF), foram
-    feitas duas visitas. A primeira visita foi realizada na Escola Municipal Moisés Santana, no Bairro Capuava. A
-    segunda visita foi realizada na Escola Maria Araújo de Freitas, no Parque Atheneu.</p>
+    feitas duas visitas. A primeira visita (07/11) foi realizada na Escola Municipal Moisés Santana, no Bairro Capuava. A
+    segunda visita (09/11) foi realizada na Escola Maria Araújo de Freitas, no Parque Atheneu.</p>
   <p><b>Na primeira visita</b>, a equipe chegou às 8:40 da manhã, montaram os equipamentos e passaram o dia recebendo
     grupos de alunos, fazendo-os passear pela história da informática. Receberam 12 grupos, com cerca de 10 a 15 alunos
     cada, do 1º ao 6º ano.</p>
