--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -4,8 +4,10 @@
             <img style="filter: brightness(70%)" src="../../../assets/images/jges-horizontal.png">
             <!-- random image -->
             <div class="caption left-align">
-                <a class="btn blue slide-cbs-btn" routerLink="/evento/jges">Visão Geral</a><br><br>
-                <a class="btn green slide-cbs-btn" routerLink="/palestrantesjges">Ver Palestrantes</a><br><br>
+                <a class="btn purple slide-cbs-btn" routerLink="/evento/jges">Visão Geral</a><br><br>
+                <a class="btn red slide-cbs-btn" href="https://goo.gl/forms/cmdoJzaDd4tVG37y1" target="_blank">Inscrições</a><br><br>
+                <a class="btn green slide-cbs-btn" routerLink="/programacaojges">Programação</a><br><br>
+                <a class="btn white slide-cbs-btn black-text" routerLink="/palestrantesjges">Ver Palestrantes</a><br><br>
             </div>
         </li>
         <li>
