--- a/src/app/jges/jges.component.html
+++ b/src/app/jges/jges.component.html
@@ -1,3 +1,51 @@
-<p>
-  jges works!
-</p>
+<app-cabecajges></app-cabecajges>
+<div class="container">
+  <br>
+  <h4 align="center" class="font-bold brown-text text-darken-4">Programação Geral</h4>
+  <br>
+  <h5 style="padding:10px" class="deep-orange darken-3 white-text" align="center">23/11/2018</h5>
+  <table class="striped centered responsive-table">
+    <tbody>
+      <tr>
+        <td><b>13h30</b></td>
+        <td><b>Abertura – RH em software: Uma questão de Estratégica</b><br><br>
+          Profa Msc. Adriana Silveira de Souza<br><br>
+          Universidade Federal de Goiá e Pontifícia Universidade Católica de
+          Goiás e Estratégia Tecnologia da Informação
+        </td>
+      </tr>
+      <tr>
+        <td><b>14:00h</b></td>
+        <td>
+          <b>Palestra I: Os desafios e a importância do RH na TOTVS</b><br><br>
+          Sra Denia Rezende - Diretora de Tecnologia do Grupo Totvs – Goiânia
+        </td>
+      </tr>
+      <tr>
+        <td><b>15:30h</b></td>
+        <td>
+          <b>Palestra II: TI e seu impacto na gestão de pessoas</b><br><br>
+          Profa. Dra Kátia Barbosa Mâcedo - Pontifícia Universidade Católica de Goiás
+        </td>
+      </tr>
+      <tr>
+        <td><b>17:00h</b></td>
+        <td>
+          <b>Mesa Redonda: Desafios para RH em Tecnologia – Priorizar ou Remediar?</b>
+        </td>
+      </tr>
+      <tr>
+        <td><b>17:30h</b></td>
+        <td><b>Lançamento do Livro: O diálogo que Transforma, com a Profa. Dra Kátia Barbosa Macedo</b>
+        </td>
+      </tr>
+      <tr>
+        <td><b>18:00h</b></td>
+        <td>
+          <b>Encerramento</b>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<app-faixajges></app-faixajges>
