--- a/src/app/jges/palestrantesjges/palestrantesjges.component.html
+++ b/src/app/jges/palestrantesjges/palestrantesjges.component.html
@@ -11,9 +11,13 @@
           <!-- notice the "circle" class -->
         </div>
         <div class="col s10">
-          <b>Katia Barbosa Macedo</b><br><br>
+          <b>Dra. Katia Barbosa Macedo</b><br><br>
           <span class="black-text">
-            Professora Doutora - Psicologia PUCGO
+              <p>É psicóloga pela Universidade Católica de Goiás (1985), concluiu o Master En Psicología Aplicada a Las Organizaciones - Escuela de Administración de Empresas de Barcelona (1988), mestrado em Educação pela
+
+              Universidade Federal de Goiás (1994) e doutorado em Psicologia (Psicologia Social) pela Pontifícia Universidade Católica de São Paulo (1999). Pós-doutorado na Unicamp e no CNAM – Paris. </p>
+              <p>Foi presidente da Agrh- associação goiana de recursos humanos, membro e ex secretária Nacional da Sbpot sociedade brasileira de psicologia organizacional e do Trabalho. É psicanalista formada pela IPA International Psychoanalitical Association, membro da Sociedade de psicanálise de Brasília. Atualmente é professora titular, atuando na graduação dos cursos de administração e psicologia e no mestrado e doutorado de Psicologia da Pontifícia Universidade Católica de Goiás.</p>
+              <p>Possui mais de trinta anos de experiência como consultora de recursos humanos e/ou como gerente de recursos humanos, tendo atuado em organizações goianas. Atua em psicologia e psicanálise, e desenvolve pesquisas enfocando fatores humanos no Trabalho, organizações, trabalho, psicologia e cultura. Sua abordagem parte da psicanálise e psicodinâmica e clínica do trabalho.</p>
           </span>
         </div>
       </div>
@@ -27,9 +31,17 @@
           <!-- notice the "circle" class -->
         </div>
         <div class="col s10">
-          <b>Dênia Rezende</b><br><br>
+          <b>Dênia Kuhn Rezende, diretora da PC Sistemas</b><br><br>
           <span class="black-text">
-            Diretora de Tecnologia do Grupo Totvs
+            <p>Dênia Kuhn Rezende assumiu a diretora do Segumento de Distribuição da PC Sistemas em outubro 2016, empresa do Grupo TOTVS, adquirida em janeiro de 2013. A executiva tem a missão de direcionar as equipes de gestores na evolução e manutenção de soluções voltadas ao mercado atacado distribuidor.</p>
+            <p>Além do cargo atual, também ocupa cadeiras no corpo docente do IPOG (Instituto de Pós-Graduação e Graduação), como professora do curso de MBA de Governança nas Tecnologias da Informação, e na UNIALFA (Centro Universitário Alves Faria), nos cursos de MBA de Executivos em Finanças Corporativas e Relações com Investidores e no de MBA em Gestão de Projetos.</p>
+            <p>Possui mais de 22 anos de experiência em gestão de TI, com foco em serviços voltados ao ciclo de vida das aplicações, desde a implantação de projeto, transição para solução, mudanças, monitoração e otimização das aplicações.</p>
+            <p>É formada em Processamento de Dados e Desenvolvimento de Sistemas pela Faculdade Objetivo (GO) e pós-graduada em Especialização em Análise e Projeto de Sistemas de Informação pela Universidade Federal de Goiás (UFGO). Também possui mestrado em Gestão de Conhecimento e Tecnologia da Informação pela Universidade Católica de Brasília.</p>
+            <b>Sobre a TOTVS</b>
+            <p>Provedora de soluções de negócios para empresas de todos os portes, atua com softwares de gestão, plataformas de produtividade e colaboração, hardware e consultoria, com liderança absoluta no mercado SMB na América Latina. Com aproximadamente 50% de marketshare no Brasil, ocupa a 20ª posição de marca mais valiosa do país no ranking da Interbrand. A TOTVS está presente em 41 países com uma receita líquida de mais de
+
+                R$ 2 bilhões. No Brasil, conta com 15 filiais, 52 franquias, 5 mil canais de distribuição e 10 centros de desenvolvimento. No exterior, conta com mais 7 filiais e 5 centros de desenvolvimento (Estados Unidos, México, China e Taiwan).</p>
+                <p>Para mais informações, acesse o website www.totvs.com ou clique <a href="https://www.totvs.com" target="_blank">aqui</a>.</p>
           </span>
         </div>
       </div>
