--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -61,8 +61,10 @@
             class="material-icons">menu</i>
         </a>
         <ul class="left hide-on-med-and-down">
+          <li><a href="https://goo.gl/forms/cmdoJzaDd4tVG37y1" target="_blank"><b>Inscrições</b></a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
+            <li routerLinkActive="active"><a routerLink="/programacaojges"><b>Programação</b></a></li>
           <li routerLinkActive="active"><a routerLink="/palestrantesjges"><b>Palestrantes</b></a></li>
         </ul>
       </div>
@@ -70,6 +72,8 @@
   </div>
 
   <ul id="nav-mobile-cbs" class="side-nav">
+      <li><a routerLink="/programacaojges"><b>Programação</b></a></li>
+    <li><a href="https://goo.gl/forms/cmdoJzaDd4tVG37y1" target="_blank"><b>Inscrições</b></a></li>
     <li routerLinkActive="active"><a routerLink="/palestrantesjges"><b>Palestrantes</b></a></li>
   </ul>
 </div>
