aplicando realizacao na faixajges

--- a/src/app/jges/faixajges/faixajges.component.html
+++ b/src/app/jges/faixajges/faixajges.component.html
@@ -8,4 +8,5 @@
       Goiânia - Goiás - Brasil
       CEP: 74605-220</b></p>
   <br>
+  <p align="center"><b>Realização:</b> Instituto de Informática da UFG e Escola de Ciências Exatas e de Computação da PUCGO</p>
 </div>
