att site de acordo com email

--- a/src/app/jges/jges.component.html
+++ b/src/app/jges/jges.component.html
@@ -18,7 +18,7 @@
         <td><b>14:00h</b></td>
         <td>
           <b>Palestra I: Os desafios e a importância do RH na TOTVS</b><br><br>
-          Sra Denia Rezende - Diretora de Tecnologia do Grupo Totvs – Goiânia
+          Sra Denia Rezende - Diretora de Seguimento de Distribuição da PC Sistemas - Grupo Totvs – Goiânia
         </td>
       </tr>
       <tr>
