--- a/src/app/jges/palestrantesjges/palestrantesjges.component.html
+++ b/src/app/jges/palestrantesjges/palestrantesjges.component.html
@@ -1,7 +1,7 @@
 <app-cabecajges></app-cabecajges>
 <div class="container">
   <br>
-  <h5 style="padding:10px" class="brown darken-4 white-text" align="center">Palestrantes</h5>
+  <h5 style="padding:10px" class="brown darken-3 white-text" align="center">Palestrantes</h5>
   <br>
   <div class="col s12 m8 offset-m2 l6 offset-l3">
     <div class="card-panel lighten-5 z-depth-1">
@@ -27,7 +27,7 @@
     <div class="card-panel lighten-5 z-depth-1">
       <div class="row valign-wrapper">
         <div class="col s2">
-          <img src="assets/images/jges/denia.jpg" alt="" class="circle responsive-img">
+          <img src="assets/images/jges/denia.png" alt="" class="circle responsive-img">
           <!-- notice the "circle" class -->
         </div>
         <div class="col s10">
