--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -52,10 +52,10 @@
 
 <div *ngIf="jges">
   <div class="navbar-fixed ">
-    <nav class="brown darken-4">
-      <div class="nav-wrapper container brown darken-4">
+    <nav class="brown darken-3">
+      <div class="nav-wrapper container brown darken-3">
         <a id="logo-container" routerLink="/evento/jges" class="brand-logo center">
-          JGES
+          <img style="padding-top:10px; max-width: 30px;" src="assets/images/jges/logo.png">
         </a>
         <a href="#" data-activates="nav-mobile-cbs" class="button-collapse" materialize="sideNav" [materializeParams]="[{menuWidth: 300,edge: 'left', closeOnClick: true, draggable: true}]"><i
             class="material-icons">menu</i>
