adicionando fotos jges e eliminando evento dev fest

--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -106,6 +106,9 @@
         </div>
       </div>
       <div class="col s12 m6 l6">
+        <img materialize="materialbox" class="materialboxed img-boxed" src={{evento.img1}}>
+      </div>
+      <div class="col s12 m6 l6">
         <img materialize="materialbox" class="materialboxed img-boxed" src={{evento.img2}}>
       </div>
       <div class="col s12 m6 l6">
